--- a/README
+++ b/README
@@ -2,6 +2,6 @@ A Project By Very Beginners
 
 Still under very basic development and more of a test project rather than a professional one in order to learn the real thing.
 
-Target 1 : Build a console app for chatting between two clients connected to a same server.
+(Achieved) Target 1 : Build a console app for chatting between two clients connected to a same server.
 Target 2 : Add support for the multiple users with multi-threading.
 Target 3 : Add GUI components using swing.
